# Cello

./: .gitattributes  .gitignore  CMakeLists.txt  INSTALL  INSTALL.md  LICENSE.md  Makefile  Makefile.am  README  README.md  TODO.md  biicode.conf  bootstrap.sh  config.h.cmake  configure.ac  dia.c  return 0  test  test.c  test.txt  userDefinedLanguage.xml
benchmarks/: benchmark  benchmark.sh  bodies_c.c  bodies_cello.c  graphs.py  timings
benchmarks/Dict/: dict_c.c  dict_cello.c  dict_cpp.cpp  dict_cs.cs  dict_d.d  dict_java.java  dict_javascript.js  dict_lua.lua  dict_python.py  dict_ruby.rb
benchmarks/GC/: gc_c.c  gc_cello.c  gc_cpp.cpp  gc_java.java  gc_javascript.js  gc_lua.lua  gc_python.py  gc_ruby.rb
benchmarks/List/: list_c.c  list_cello.c  list_cpp.cpp  list_java.java  list_javascript.js  list_lua.lua  list_python.py  list_ruby.rb
benchmarks/Map/: dict.lua  map_c.c  map_cello.c  map_cpp.cpp  map_cs.cs  map_go.go  map_java.java  map_javascript.js  map_lua.lua  map_perl.pl  map_python.py  map_ruby.rb  rb.lua  redblack.lua
benchmarks/Matmul/: matmul_c.c  matmul_cello.c  matmul_cpp.cpp  matmul_cs.cs  matmul_d.d  matmul_dart.dart  matmul_go.go  matmul_java.java  matmul_javascript.js  matmul_lua.lua  matmul_perl.pl  matmul_python.py  matmul_r.R  matmul_ruby.rb
benchmarks/Nbodies/: nbodies_c.c  nbodies_cello.c  nbodies_cpp.cpp  nbodies_java.java  nbodies_javascript.js  nbodies_lua.lua  nbodies_python.py  nbodies_ruby.rb
benchmarks/Sudoku/: sudoku_c.c  sudoku_cello.c  sudoku_cpp.cpp  sudoku_cs.cs  sudoku_d.d  sudoku_dart.dart  sudoku_go.go  sudoku_java.java  sudoku_javascript.js  sudoku_lua.lua  sudoku_perl.pl  sudoku_python.py  sudoku_ruby.rb
benchmarks/ext/: cleantxt.c  genint.c  kvec.h  regexp9.c  regexp9.h  sudoku  sudoku.txt
cmake/: VimClangComplete.cmake  configure.cmake
demos/: CMakeLists.txt  Makefile.am  Vec2+.c  Vec2+.h  Vec2.c  Vec2.h  example  example.c  files.c  functions  functions.c  lists.c  reference.c  threading.c  types  types.c
editors/: cello-mode.el  cello.lang  userDefinedLanguage.xml
examples/: CMakeLists.txt  Vec2.c  box.c  cello_world.c  example  example.c  files  files.c  functions  functions.c  garbage_collection.c  help.c  iteration.c  lists  lists.c  mapping.c  newtype.c  object.c  quickcheck.c  ranges.c  table.c  threading.c  threads.c  types  types.c
examples/src/: cello_world.c  help.c  iteration.c  newtype.c  object.c  ranges.c  table.c  threads.c
include/: +Exception.h  +List.h  +Number.h  +Prelude.h  +String.h  Array+.h  Bool+.h  Bool.h  C+.h  Cello.h  Char+.h  Closure+.h  Curry+.h  Dictionary+.h  Exception+.h  Exception.h  File+.h  Format+.h  Format.h  Function+.h  Function.h  FunctionAuto+.h  HashTable+.h  Lambda+.h  Lambda.h  LambdaCurry+.h  LambdaCurry.h  LambdaThread+.h  List+.h  List.h  Map+.h  Map.h  Monad+.h  None+.h  None.h  NoneType+.h  Number+.h  Number.h  Pool+.h  Pool.h  (+11 more)
include/Cello/: Array.h  Bool.h  Cello.h  Char.h  Dictionary.h  Exception.h  File.h  Format.h  Function.h  FunctionAuto.h  Lambda.h  LambdaCurry.h  List.h  Map.h  Module.h  Number.h  Pool.h  Prelude.h  Reference.h  String.h  Table.h  Thread.h  Tree.h  Type.h  Value.h
src/: +List.c  +Number.c  +Prelude.c  +String.c  Alloc.c  Array+.c  Array.c  Assign.c  Begin.c  Bool+.c  Bool.c  CMakeLists.txt  CTypes.c  Char+.c  Char.c  Clear.c  Closure+.c  Cmp.c  Concat.c  Copy.c  Dictionary+.c  Dictionary.c  Doc.c  Exception+.c  Exception.c  File+.c  File+.h  File.c  Format+.c  Format.c  Function+.c  Function.c  GC.c  Gen.c  Get.c  Hash.c  HashTable+.c  Help.c  Iter.c  Lambda+.c  (+47 more)
tests/: CMakeLists.txt  Makefile.am  core.c  data.c  exception.c  exceptions.c  functional.c  memory.c  ptest.c  ptest.h  test.c  test.h  test_core.c  test_data.c  test_function.c  threading.c
tests/src/: test.c
