ADD_DEFINITIONS(-std=gnu99 -Wall -Werror -Wextra -Wno-unused)

ADD_EXECUTABLE(example EXCLUDE_FROM_ALL example.c)
TARGET_LINK_LIBRARIES(example Cello)

ADD_EXECUTABLE(files EXCLUDE_FROM_ALL files.c)
TARGET_LINK_LIBRARIES(files Cello)

ADD_EXECUTABLE(functions EXCLUDE_FROM_ALL functions.c)
TARGET_LINK_LIBRARIES(functions Cello)

ADD_EXECUTABLE(lists EXCLUDE_FROM_ALL lists.c)
TARGET_LINK_LIBRARIES(lists Cello)

ADD_EXECUTABLE(reference EXCLUDE_FROM_ALL reference.c)
TARGET_LINK_LIBRARIES(reference Cello)

ADD_EXECUTABLE(types EXCLUDE_FROM_ALL types.c)
TARGET_LINK_LIBRARIES(types Cello)

ADD_EXECUTABLE(Vec2 EXCLUDE_FROM_ALL Vec2.c)
TARGET_LINK_LIBRARIES(Vec2 Cello)

