ADD_EXECUTABLE(example EXCLUDE_FROM_ALL example.c)
TARGET_LINK_LIBRARIES(example ${CELLO_LIBRARY_TARGET})

ADD_EXECUTABLE(files EXCLUDE_FROM_ALL files.c)
TARGET_LINK_LIBRARIES(files ${CELLO_LIBRARY_TARGET})

ADD_EXECUTABLE(functions EXCLUDE_FROM_ALL functions.c)
TARGET_LINK_LIBRARIES(functions ${CELLO_LIBRARY_TARGET})

ADD_EXECUTABLE(lists EXCLUDE_FROM_ALL lists.c)
TARGET_LINK_LIBRARIES(lists ${CELLO_LIBRARY_TARGET})

ADD_EXECUTABLE(reference EXCLUDE_FROM_ALL reference.c)
TARGET_LINK_LIBRARIES(reference ${CELLO_LIBRARY_TARGET})

ADD_EXECUTABLE(types EXCLUDE_FROM_ALL types.c)
TARGET_LINK_LIBRARIES(types ${CELLO_LIBRARY_TARGET})

ADD_EXECUTABLE(Vec2 EXCLUDE_FROM_ALL Vec2.c)
TARGET_LINK_LIBRARIES(Vec2 ${CELLO_LIBRARY_TARGET})

