
demosdir = demos
demos_PROGRAMS = example files functions lists reference types Vec2

example_SOURCES = example.c
files_SOURCES = files.c
functions_SOURCES = functions.c
lists_SOURCES = lists.c
reference_SOURCES = reference.c
types_SOURCES = types.c
Vec2_SOURCES = Vec2.c

example_CPPFLAGS = -I$(top_srcdir)/demos
example_CFLAGS = -std=gnu99 -Wall -Werror -Wextra -Wno-unused 
example_LDFLAGS = -lCello

files_CPPFLAGS = -I$(top_srcdir)/demos
files_CFLAGS = -std=gnu99 -Wall -Werror -Wextra -Wno-unused 
files_LDFLAGS = -lCello

functions_CPPFLAGS = -I$(top_srcdir)/demos
functions_CFLAGS = -std=gnu99 -Wall -Werror -Wextra -Wno-unused 
functions_LDFLAGS = -lCello

lists_CPPFLAGS = -I$(top_srcdir)/demos
lists_CFLAGS = -std=gnu99 -Wall -Werror -Wextra -Wno-unused 
lists_LDFLAGS = -lCello

reference_CPPFLAGS = -I$(top_srcdir)/demos
reference_CFLAGS = -std=gnu99 -Wall -Werror -Wextra -Wno-unused 
reference_LDFLAGS = -lCello

types_CPPFLAGS = -I$(top_srcdir)/demos
types_CFLAGS = -std=gnu99 -Wall -Werror -Wextra -Wno-unused 
types_LDFLAGS = -lCello

Vec2_CPPFLAGS = -I$(top_srcdir)/demos
Vec2_CFLAGS = -std=gnu99 -Wall -Werror -Wextra -Wno-unused 
Vec2_LDFLAGS = -lCello
